--- a/style.css
+++ b/style.css
@@ -80,8 +80,23 @@ header {
     0px;
   color: hsl(0, 0%, 100%);
   display: inline-block;
-  font-size: 22px;
-  line-height: 22px;
+  font-size: 12px;
+  line-height: 12px;
+  margin: 16px 16px 16px 20px;
+  padding: 14px 34px;
+  text-align: center;
+  cursor: pointer;
+}
+.copy-btn {
+  border: none;
+  background-color: rgb(117, 117, 117);
+  border-radius: 25px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
+    0px;
+  color: hsl(0, 0%, 100%);
+  display: inline-block;
+  font-size: 12px;
+  line-height: 12px;
   margin: 16px 16px 16px 20px;
   padding: 14px 34px;
   text-align: center;
